# da_etcs

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
include/: edge.h  instance.h
src/: instance.cpp  main.cpp
tests/: complexExample.txt  runningExample.txt  syntax.txt  test.txt
